<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_fragment_background"
    android:orientation="vertical"
    android:padding="@dimen/space_xl">

    <TextView
        android:id="@+id/youSureTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_sm"
        android:text="@string/youSurePrompt"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AleX.Title" />

    <TextView
        android:id="@+id/noteView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_md"
        android:layout_marginBottom="@dimen/space_xl"
        android:text="@string/youSurePrompt2"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AleX.Caption" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/yesButton"
            style="@style/Widget.AleX.Button.Secondary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/space_sm"
            android:layout_weight="1"
            android:text="@string/yes" />

        <Button
            android:id="@+id/noButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_sm"
            android:layout_weight="1"
            android:text="@string/no" />

    </LinearLayout>

</LinearLayout>
