<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_fragment_background"
    android:orientation="vertical"
    android:padding="@dimen/space_xl">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageField"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:contentDescription="@string/descPlaceholder"
            android:scaleType="centerCrop"
            android:src="@drawable/add_image"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/ShapeAppearance.AleX.Image" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Sits tight under the photo so the two read as one unit, with the existing space_xl
         below separating the pair from the detail lines. -->
    <TextView
        android:id="@+id/nameView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_md"
        android:ellipsize="end"
        android:maxLines="2"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AleX.Title"
        tools:text="Cold Snap" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_xl"
        android:layout_marginBottom="@dimen/space_xl"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dateView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/viewDatePrefix"
            android:textAppearance="@style/TextAppearance.AleX.Body" />

        <TextView
            android:id="@+id/whereView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_md"
            android:text="@string/viewWhereSuffix"
            android:textAppearance="@style/TextAppearance.AleX.Body" />

        <TextView
            android:id="@+id/kindView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_md"
            android:text="@string/viewKindPrefix"
            android:textAppearance="@style/TextAppearance.AleX.Body" />

        <TextView
            android:id="@+id/noteView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_md"
            android:text="@string/viewNotes"
            android:textAppearance="@style/TextAppearance.AleX.Body" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/editButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/space_sm"
            android:layout_weight="1"
            android:text="@string/edit" />

        <Button
            android:id="@+id/deleteButton"
            style="@style/Widget.AleX.Button.Secondary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_sm"
            android:layout_weight="1"
            android:text="@string/delete" />

    </LinearLayout>

</LinearLayout>
