<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_fragment_background"
        android:orientation="vertical"
        android:padding="@dimen/space_xl">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_lg">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imageField"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@color/surface_muted"
                android:contentDescription="@string/descPlaceholder"
                android:scaleType="centerInside"
                android:src="@drawable/add_image"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/ShapeAppearance.AleX.Image" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/dateLayout"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/touch_target"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/calImage"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="@dimen/space_sm"
                android:contentDescription="@string/descPlaceholder"
                android:src="@drawable/calendar" />

            <TextView
                android:id="@+id/dateField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:text="@string/dateHint"
                android:textAppearance="@style/TextAppearance.AleX.BodyLarge" />

        </LinearLayout>

        <EditText
            android:id="@+id/nameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_lg"
            android:autofillHints=""
            android:hint="@string/nameHint"
            android:inputType="text" />

        <EditText
            android:id="@+id/whereField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_md"
            android:autofillHints=""
            android:hint="@string/whereHint"
            android:inputType="text" />

        <EditText
            android:id="@+id/kindField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_md"
            android:autofillHints=""
            android:hint="@string/kindHint"
            android:inputType="text" />

        <EditText
            android:id="@+id/noteField"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="@dimen/space_md"
            android:autofillHints=""
            android:gravity="top"
            android:hint="@string/notesHint"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/doneButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_xl"
            android:text="@string/done" />

    </LinearLayout>
</ScrollView>
