<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/space_sm"
    android:background="@drawable/card"
    android:elevation="2dp"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="@dimen/space_md">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/thumbnail"
        android:layout_height="@dimen/thumbnail"
        android:layout_marginEnd="@dimen/space_md"
        android:contentDescription="@string/descPlaceholder"
        android:scaleType="centerCrop"
        android:src="@drawable/placeholder"
        app:shapeAppearanceOverlay="@style/roundedImageView" />

    <TextView
        android:id="@+id/numberView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/space_xs"
        android:text="@string/ordernumber"
        android:textAppearance="@style/TextAppearance.AleX.Title"
        android:textColor="@color/ink_muted" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AleX.Title" />

</LinearLayout>
