<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brand">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/space_lg"
        android:layout_marginTop="@dimen/space_4xl"
        android:layout_marginEnd="@dimen/space_lg"
        android:layout_marginBottom="@dimen/space_3xl"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/hello"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hey"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AleX.Display"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/howMany"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_sm"
            android:layout_marginBottom="@dimen/space_xl"
            android:text="@string/descPlaceholder"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AleX.BodyLarge"
            android:fontFamily="sans-serif"
            app:fontFamily="sans-serif"
            android:textColor="@color/white" />

        <!-- Backup state. Visible on the main screen because a silent sync failure is how a
             week of entries went un-backed-up without anyone noticing. -->
        <TextView
            android:id="@+id/syncStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_md"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AleX.Caption"
            android:fontFamily="sans-serif"
            app:fontFamily="sans-serif"
            android:textColor="@color/accent"
            tools:text="⚠ 3 entries not backed up yet" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingBottom="@dimen/space_4xl" />
    </LinearLayout>

    <!-- Cloud backup / account button -->
    <ImageButton
        android:id="@+id/accountButton"
        android:layout_width="@dimen/touch_target"
        android:layout_height="@dimen/touch_target"
        android:layout_marginTop="@dimen/space_2xl"
        android:layout_marginEnd="@dimen/space_md"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/account"
        android:src="@drawable/account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Floating Action Button -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:backgroundTint="@color/surface"
        android:contentDescription="@string/descPlaceholder"
        android:src="@drawable/icon"
        app:elevation="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95"
        app:tint="@null" />
</androidx.constraintlayout.widget.ConstraintLayout>
